@@ -1,3 +1,11 @@
+2003-04-25 Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp: Added comment for translators thanks to Christian
+	Rose.
+
+	* src/gatekeeper.cpp, src/connection.cpp: Fixed wrong include thanks
+	to Matthias Marks.
+	
 2003-04-24 Damien Sandras  <dsandras@seconix.com>
 
 	* configure.in: Added missing flags.
